--- a/src/styles.css
+++ b/src/styles.css
@@ -102,7 +102,7 @@ a {
 }
 
 .form-auth__title {
-  font-size: 28px;
+  font-size: 2rem;
   margin-bottom: 40px;
   color: rgb(67, 53, 80);
   position: relative;
@@ -200,6 +200,7 @@ a {
 
 #send {
   width: 60%;
+  font-size: 1rem;
   border: none;
   background:  linear-gradient(45deg, rgb(67, 53, 80), rgb(206, 182, 236));
   border-radius: 20px;
@@ -208,4 +209,66 @@ a {
 
 #send:hover {
   background: linear-gradient(45deg, rgb(206, 182, 236), rgb(67, 53, 80));;
+}
+
+@media screen and (max-width: 760px) {
+
+  html {
+    font-size: 14px;
+  }
+
+  .form-auth__title {
+    font-size: 1.5rem;
+  }
+
+  .form-auth__item:nth-child(4) {
+    flex-direction: column;
+    align-items: flex-end;
+  }
+
+  .form-auth__label {
+    margin-bottom: 20px;
+  }
+  
+  .form-auth__input::placeholder {
+    font-size: 0.8rem;
+  }
+
+  #send {
+    width: 90%;
+  }
+}
+
+@media screen and (max-width: 400px) {
+
+  .form-auth__title {
+    font-size: 1.2rem;
+  }
+
+  .form-auth__input {
+    height: 30px;
+  }
+
+  .form-auth__input::placeholder {
+    font-size: 0.7rem;
+  }
+
+  .form-auth__item:nth-child(4) {
+    align-items: center;
+  }
+
+  .form-auth__label::before {
+    left: -26px;
+  }
+
+  #send {
+    width: 100%;
+  }
+}
+
+@media screen and (max-width: 368px) {
+
+  .form-auth__input::placeholder {
+    font-size: 0.55rem;
+  }
 }
