--- a/src/styles.css
+++ b/src/styles.css
@@ -19,6 +19,38 @@ html {
   font-family: 'Montserrat Alternates', Arial, Helvetica, sans-serif;
 }
 
+.modal {
+  display: none;
+  width: 100%;
+  height: 100%;
+  align-items: center;
+  justify-content: center;
+  position: fixed;
+  z-index: 400;
+  background-color: rgba(0, 0, 0, 0.1);
+}
+
+.modal__close {
+  position: absolute;
+  top: 10px;
+  right: 10px;
+  cursor: pointer;
+}
+
+.modal__inner {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  padding: 20px;
+  width: 300px;
+  height: 120px;
+  border: 1px solid rgb(224, 103, 103);
+  background-color: rgba(224, 103, 103, 0.103);
+  border-radius: 12px;
+  font-size: 1.2rem;
+  position: relative;
+}
+
 .container {
   width: 100%;
   max-width: 1200px;
@@ -48,10 +80,15 @@ a {
 }
 
 .header {
-  padding: 20px 0;
+  height: 80px;
+  padding: 20px 40px;
+  position: -webkit-sticky;
   position: sticky;
   top: 0;
   background-color: rgba(197, 191, 191, 0.562);
+  display: flex;
+  justify-content: flex-end;
+  align-items: center;
 }
 
 .header__inner {
@@ -60,12 +97,18 @@ a {
   max-width: 1200px;
 }
 
-
 .header__btn {
   border: none;
   background: transparent;
   width: 100px;
   font-size: 0.8rem;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.header__btn_logout {
+  display: none;
 }
 
 .header__icon {
@@ -74,13 +117,14 @@ a {
   object-fit: contain;
   -o-object-position: top;
   object-position: top;
+}
+
+.header__btn_login .header__icon {
   margin-right: 10px;
 }
 
-.header__btn {
-  display: flex;
-  justify-content: center;
-  align-items: center;
+.header__btn_logout .header__icon {
+  margin-left: 10px;
 }
 
 .form-auth {
@@ -89,16 +133,32 @@ a {
   border: 1px solid rgb(247, 241, 241);
   margin-top: 15vh;
   padding: 30px;
-  display: flex;
+  display: none;
   flex-direction: column;
   justify-content: space-between;
   align-items: center;
   transition: all 1s;
+  position: relative;
 }
 
 .form-auth:hover {
   background-color: rgba(235, 241, 250, 0.329);
-  box-shadow: 2px 2px 8px rgba(165, 167, 170, 0.548);;
+  box-shadow: 2px 2px 8px rgba(165, 167, 170, 0.548);
+}
+
+.form-auth__close {
+  border: none;
+  background: transparent;
+  position: absolute;
+  top: 10px;
+  right: 10px;
+}
+
+.form-auth__close-icon {
+  -o-object-fit: contain;
+  object-fit: contain;
+  -o-object-position: center;
+  object-position: center;
 }
 
 .form-auth__title {
@@ -116,7 +176,7 @@ a {
   width: 100%;
 }
 
-.form-auth__item:nth-child(4) {
+.form-auth__item_chek {
   justify-content: space-between;
 }
 
@@ -139,6 +199,22 @@ a {
   background-color: rgba(224, 103, 103, 0.103);
 }
 
+.form-auth__input:invalid::-webkit-input-placeholder {
+  color: rgb(224, 103, 103);
+}
+
+.form-auth__input:invalid::-moz-placeholder {
+  color: rgb(224, 103, 103);
+}
+
+.form-auth__input:invalid:-ms-input-placeholder {
+  color: rgb(224, 103, 103);
+}
+
+.form-auth__input:invalid::-ms-input-placeholder {
+  color: rgb(224, 103, 103);
+}
+
 .form-auth__input:invalid::placeholder {
   color: rgb(224, 103, 103);
 }
@@ -153,6 +229,26 @@ a {
 
 .form-auth__input:active {
   background-color: rgba(169, 198, 230, 0.281);
+}
+
+.form-auth__input::-webkit-input-placeholder {
+  font-family: 'Montserrat Alternates', Arial, Helvetica, sans-serif;
+  color: rgb(177, 173, 173);
+}
+
+.form-auth__input::-moz-placeholder {
+  font-family: 'Montserrat Alternates', Arial, Helvetica, sans-serif;
+  color: rgb(177, 173, 173);
+}
+
+.form-auth__input:-ms-input-placeholder {
+  font-family: 'Montserrat Alternates', Arial, Helvetica, sans-serif;
+  color: rgb(177, 173, 173);
+}
+
+.form-auth__input::-ms-input-placeholder {
+  font-family: 'Montserrat Alternates', Arial, Helvetica, sans-serif;
+  color: rgb(177, 173, 173);
 }
 
 .form-auth__input::placeholder {
@@ -186,9 +282,10 @@ a {
   border: 1px solid rgb(160, 157, 157);
   position: absolute;
   left: -32px;
+  top: 0;
 }
 
-#remember:checked + .form-auth__label::before  {
+#remember:checked + .form-auth__label::before {
   content: url('./img/checked.svg');
   background-color: rgba(197, 191, 191, 0.562);
 }
@@ -207,7 +304,7 @@ a {
   width: 60%;
   font-size: 1rem;
   border: none;
-  background:  linear-gradient(45deg, rgb(67, 53, 80), rgb(206, 182, 236));
+  background: linear-gradient(45deg, rgb(67, 53, 80), rgb(206, 182, 236));
   border-radius: 20px;
   color: white;
 }
@@ -217,7 +314,6 @@ a {
 }
 
 @media screen and (max-width: 760px) {
-
   html {
     font-size: 14px;
   }
@@ -226,7 +322,7 @@ a {
     font-size: 1.5rem;
   }
 
-  .form-auth__item:nth-child(4) {
+  .form-auth__item_chek {
     flex-direction: column;
     align-items: flex-end;
   }
@@ -234,9 +330,30 @@ a {
   .form-auth__label {
     margin-bottom: 20px;
   }
-  
+
+  .form-auth__input::-webkit-input-placeholder {
+    font-size: 0.8rem;
+  }
+
+  .form-auth__input::-moz-placeholder {
+    font-size: 0.8rem;
+  }
+
+  .form-auth__input:-ms-input-placeholder {
+    font-size: 0.8rem;
+  }
+
+  .form-auth__input::-ms-input-placeholder {
+    font-size: 0.8rem;
+  }
+
   .form-auth__input::placeholder {
     font-size: 0.8rem;
+  }
+
+  .form-auth__label::before {
+    top: -3px;
+    left: -27px;
   }
 
   #send {
@@ -245,7 +362,6 @@ a {
 }
 
 @media screen and (max-width: 400px) {
-
   .form-auth__title {
     font-size: 1.2rem;
   }
@@ -254,11 +370,27 @@ a {
     height: 30px;
   }
 
+  .form-auth__input::-webkit-input-placeholder {
+    font-size: 0.7rem;
+  }
+
+  .form-auth__input::-moz-placeholder {
+    font-size: 0.7rem;
+  }
+
+  .form-auth__input:-ms-input-placeholder {
+    font-size: 0.7rem;
+  }
+
+  .form-auth__input::-ms-input-placeholder {
+    font-size: 0.7rem;
+  }
+
   .form-auth__input::placeholder {
     font-size: 0.7rem;
   }
 
-  .form-auth__item:nth-child(4) {
+  .form-auth__item_chek {
     align-items: center;
   }
 
@@ -272,7 +404,18 @@ a {
 }
 
 @media screen and (max-width: 368px) {
-
+  .form-auth__input::-webkit-input-placeholder {
+    font-size: 0.55rem;
+  }
+  .form-auth__input::-moz-placeholder {
+    font-size: 0.55rem;
+  }
+  .form-auth__input:-ms-input-placeholder {
+    font-size: 0.55rem;
+  }
+  .form-auth__input::-ms-input-placeholder {
+    font-size: 0.55rem;
+  }
   .form-auth__input::placeholder {
     font-size: 0.55rem;
   }
